--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		<section class="hero-2">
 			<h2>Some random information</h2>
 			<div class="container row">
+				<!-- above container has max width for img containers -->
 				<div class="container__img">
 					<div class="img"></div>
 					<p>this is some subtext under an illustration or image</p>
