--- a/index.html
+++ b/index.html
@@ -10,88 +10,94 @@
 	<body>
 		<header class="header-footer">
 			<div class="container row">
-				<nav class="navbar">
-					<li class="nav-item logo">
-						<a
-							href="http://"
-							target="_blank"
-							rel="noopener noreferrer"
-							>Header Logo</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							href="http://"
-							target="_blank"
-							rel="noopener noreferrer"
-							>header link one</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							href="http://"
-							target="_blank"
-							rel="noopener noreferrer"
-							>header link two</a
-						>
-					</li>
-					<li class="nav-item">
-						<a
-							href="http://"
-							target="_blank"
-							rel="noopener noreferrer"
-							>header link three</a
-						>
-					</li>
+				<nav class="nav">
+					<ul class="nav__list nav__list-primary">
+						<li class="nav__item logo">
+							<a
+								href="http://"
+								target="_blank"
+								rel="noopener noreferrer"
+								>Header Logo</a
+							>
+						</li>
+					</ul>
+					<ul class="nav__list nav__list-secondary">
+						<li class="nav__item">
+							<a class="nav__link"
+								href="http://"
+								target="_blank"
+								rel="noopener noreferrer"
+								>header link one</a
+							>
+						</li>
+						<li class="nav__item">
+							<a class="nav__link"
+								href="http://"
+								target="_blank"
+								rel="noopener noreferrer"
+								>header link two</a
+							>
+						</li>
+						<li class="nav__item">
+							<a class="nav__link"
+								href="http://"
+								target="_blank"
+								rel="noopener noreferrer"
+								>header link three</a
+							>
+						</li>
+					</ul>
 				</nav>
 			</div>
 		</header>
 		<section class="hero">
 			<div class="container row">
-				<div class="hero__text">
-					<h1>This website is awesome</h1>
-					<p>
-						This website has some subtext that goes under here under
+				<div class="col hero__text">
+					<h1 class="hero__main-text">This website is awesome</h1>
+					<p class="hero__secondary-text">
+						This website has some subtext that goes here under
 						the main title. It's smaller font and the color is lower
 						contrast
 					</p>
 					<a
-						class="hero-btn"
+						class="hero__button"
 						href="#"
 						target="_blank"
 						rel="noopener noreferrer"
 						>Sign up</a
 					>
 				</div>
-				<div class="hero__img">
+				<div class="col hero__img">
 					<p>this is a placeholder for an image</p>
 				</div>
 			</div>
 		</section>
 		<section class="hero-2">
-			<h2>Some random information</h2>
-			<div class="container row">
-				<!-- above container has max width for img containers -->
-				<div class="container__img">
-					<div class="img"></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div class="container__img">
-					<div class="img"></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div class="container__img">
-					<div class="img"></div>
-					<p>this is some subtext under an illustration or image</p>
-				</div>
-				<div class="container__img">
-					<div class="img"></div>
-					<p>this is some subtext under an illustration or image</p>
+			<div class="container">
+				<h2>Some random information</h2>
+				<div class="row">
+					<!-- above container has max width for img containers -->
+					<div class="col container__img">
+						<div class="img"></div>
+						<p>this is some subtext under an illustration or image</p>
+					</div>
+					<div class="col container__img">
+						<div class="img"></div>
+						<p>this is some subtext under an illustration or image</p>
+					</div>
+					<div class="col container__img">
+						<div class="img"></div>
+						<p>this is some subtext under an illustration or image</p>
+					</div>
+					<div class="col container__img">
+						<div class="img"></div>
+						<p>this is some subtext under an illustration or image</p>
+					</div>
 				</div>
 			</div>
 		</section>
 		<section class="hero-3">
-			<div class="accent__text">
+			<div class="container accent__text">
 				<p>
 					This is an inspiring quote, or a testimonial from a
 					customer. Maybe it's just filing up space, or maybe people
@@ -102,18 +108,18 @@
 			</div>
 		</section>
 		<section class="hero-4">
-			<div class="accent row">
-				<div class="accent__container">
+			<div class="container accent row">
+				<div class="col accent__container">
 					<h2>Call to action! It's time!</h2>
 					<p>Sign up for our product by clicking that button right over there!</p>
 				</div>
-				<div class="accent__container">
+				<div class="col accent__container">
 					<a href="#" target="_blank" rel="noopener noreferrer">Sign up</a>
 				</div>
 			</div>
 		</section>
 		<footer class="header-footer">
-			<p>Copyright The Odin Project 2021</p>
+			<p>Copyright &copy; The Odin Project 2021</p>
 		</footer>
 	</body>
 </html>
