Update desktop styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 					</ul>
 					<ul class="nav__list nav__list-secondary">
 						<li class="nav__item">
-							<a class="nav__link"
+							<a
+								class="nav__link"
 								href="http://"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -31,7 +32,8 @@
 							>
 						</li>
 						<li class="nav__item">
-							<a class="nav__link"
+							<a
+								class="nav__link"
 								href="http://"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -39,7 +41,8 @@
 							>
 						</li>
 						<li class="nav__item">
-							<a class="nav__link"
+							<a
+								class="nav__link"
 								href="http://"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -55,8 +58,8 @@
 				<div class="col hero__text">
 					<h1 class="hero__main-text">This website is awesome</h1>
 					<p class="hero__secondary-text">
-						This website has some subtext that goes here under
-						the main title. It's smaller font and the color is lower
+						This website has some subtext that goes here under the
+						main title. It's smaller font and the color is lower
 						contrast
 					</p>
 					<a
@@ -68,53 +71,70 @@
 					>
 				</div>
 				<div class="col hero__img">
-					<p>this is a placeholder for an image</p>
+					<p class="img__title">this is a placeholder for an image</p>
 				</div>
 			</div>
 		</section>
 		<section class="hero-2">
 			<div class="container">
-				<h2>Some random information</h2>
-				<div class="row">
+				<h2 class="hero-2__title">Some random information</h2>
+				<div class="row container__info">
 					<!-- above container has max width for img containers -->
 					<div class="col container__img">
 						<div class="img"></div>
-						<p>this is some subtext under an illustration or image</p>
+						<p>
+							this is some subtext under an illustration or image
+						</p>
 					</div>
 					<div class="col container__img">
 						<div class="img"></div>
-						<p>this is some subtext under an illustration or image</p>
+						<p>
+							this is some subtext under an illustration or image
+						</p>
 					</div>
 					<div class="col container__img">
 						<div class="img"></div>
-						<p>this is some subtext under an illustration or image</p>
+						<p>
+							this is some subtext under an illustration or image
+						</p>
 					</div>
 					<div class="col container__img">
 						<div class="img"></div>
-						<p>this is some subtext under an illustration or image</p>
+						<p>
+							this is some subtext under an illustration or image
+						</p>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class="hero-3">
 			<div class="container accent__text">
-				<p>
+				<p class="accent__quote">
 					This is an inspiring quote, or a testimonial from a
 					customer. Maybe it's just filing up space, or maybe people
 					will actually read it. Who knows? All I know is that it
 					looks nice.
 				</p>
-				<p>-Thor, God of Thunder</p>
+				<p class="accent__sign">-Thor, God of Thunder</p>
 			</div>
 		</section>
 		<section class="hero-4">
 			<div class="container accent row">
 				<div class="col accent__container">
-					<h2>Call to action! It's time!</h2>
-					<p>Sign up for our product by clicking that button right over there!</p>
+					<h2 class="accent__title">Call to action! It's time!</h2>
+					<p class="hero-4__text">
+						Sign up for our product by clicking that button right
+						over there!
+					</p>
 				</div>
-				<div class="col accent__container">
-					<a href="#" target="_blank" rel="noopener noreferrer">Sign up</a>
+				<div class="col accent__button">
+					<a
+						class="btn"
+						href="#"
+						target="_blank"
+						rel="noopener noreferrer"
+						>Sign up</a
+					>
 				</div>
 			</div>
 		</section>
